# DeepFindET

./: LICENSE  README.md  pyproject.toml
deepfindET/: callbacks.py  inference.py  losses.py  settings.py  training_copick.py
deepfindET/entry_points/: step1.py  step2.py  step3.py  step4.py
deepfindET/models/: attention_unet.py  model_loader.py  res_unet.py  unet.py
deepfindET/utils/: augmentdata.py  common.py  copick_tools.py  core.py  dataloader.py  evaluate.py  objl.py  target_build.py
deepfindet/: callbacks.py  inference.py  losses.py  settings.py  training_copick.py
deepfindet/entry_points/: step1.py  step2.py  step3.py  step4.py
deepfindet/models/: attention_unet.py  model_loader.py  res_unet.py
deepfindet/utils/: augmentdata.py  common.py  core.py  dataloader.py  evaluate.py  objl.py  target_build.py
tutorials/: augment.ipynb  config_10439.json  predict.ipynb  train.ipynb
